# pinocchio-programs

./: README.md
basics/account-data/: Cargo.toml  pinnochio-helper.rs
basics/account-data/src/: processor.rs
basics/account-data/src/instructions/: create.rs  mod.rs
basics/account-data/src/state/: address_info.rs
basics/account-data/tests/: account_data.rs
basics/address-onchain/: Cargo.toml  README.md
basics/address-onchain/src/: constants.rs  lib.rs  processor.rs
basics/address-onchain/tests/: account_data.rs
basics/close-acccount/: Cargo.toml
basics/close-acccount-program/src/: lib.rs
basics/close-acccount-program/tests/: close-account.rs
basics/close-acccount/src/: processor.rs
basics/close-acccount/src/instructions/: create_user.rs
basics/close-acccount/src/state/: user.rs
basics/counter/: Cargo.toml
basics/counter-program/: Cargo.toml  README.md
basics/counter-program/src/: constants.rs  error.rs  lib.rs
basics/counter-program/tests/: counter.rs
basics/counter/src/: processor.rs
basics/counter/src/instructions/: create.rs
basics/counter/src/state/: counter.rs
basics/counter/tests/: counter.rs
basics/favorites/: Cargo.toml
basics/favorites/src/: constants.rs  error.rs
basics/hello-solana/: README.md
basics/hello-world-solana/: Cargo.toml  package.json
basics/sol-trasnfer/: .gitignore  Cargo.toml  README.md
basics/store-your-favs/: README.md
blueshift_escrow/: Cargo.toml
blueshift_escrow/src/: errors.rs  lib.rs  state.rs
blueshift_vault/: Cargo.toml
blueshift_vault/src/: lib.rs
(+31 files in other folders)
